force-app/main/default/objects/Xero_Payment__c.object
<CustomObject>
    <description>A payment recorded on an invoice. This gets queried from Xero.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Rate__c</fullName>
        <label>Currency Rate</label>
        <precision>16</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Invoice_Statement__r.Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_School_Address_for_Docs_from_User__c</fullName>
        <formula>$User.Full_School_Address_for_Docs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full School Address for Docs (from User)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>Invoice_Statement__r.Xero_Invoice_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Statement__c</fullName>
        <description>Lookup to the Invoice for which this payment is associated.</description>
        <label>Invoice</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_Xero_Payment__c</fullName>
        <formula>&quot;https://go.xero.com/Bank/ViewTransaction.aspx?bankTransactionID=&quot;&amp;Xero_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Xero Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Reference__c</fullName>
        <formula>IF( Invoice_Statement__r.Payer__r.RecordTypeId = &quot;0126F000001hW0T&quot;, Invoice_Statement__r.Payer__r.FirstName&amp;&quot; &quot;&amp;Invoice_Statement__r.Payer__r.LastName, Invoice_Statement__r.Payer__r.Name)&amp;&quot; (&quot;&amp; Invoice_Statement__r.Reference_Short__c &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account &amp; Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Text__c</fullName>
        <formula>Invoice_Statement__r.Xero_Invoice_Currency__c &amp;&quot; &quot;&amp; 
IF( 
Payment_Amount__c &gt;= 1000000, 
TEXT(FLOOR(Payment_Amount__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Payment_Amount__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Payment_Amount__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Payment_Amount__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Payment_Amount__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Payment_Amount__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Payment_Amount__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Currency__c</fullName>
        <label>Payment Currency (Xero)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Text__c</fullName>
        <formula>TEXT (DAY( Payment_Date__c )) &amp;&quot;-&quot;&amp;         

CASE ( TEXT (MONTH( Payment_Date__c )), &quot;1&quot;, &quot;Jan&quot;, &quot;2&quot;, &quot;Feb&quot;, &quot;3&quot;, &quot;Mar&quot;, &quot;4&quot;, &quot;Apr&quot;, &quot;5&quot;, &quot;May&quot;, &quot;6&quot;, &quot;Jun&quot;, &quot;7&quot;, &quot;Jul&quot;, &quot;8&quot;, &quot;Aug&quot;, &quot;9&quot;, &quot;Sep&quot;, &quot;10&quot;, &quot;Oct&quot;, &quot;11&quot;, &quot;Nov&quot;, &quot;12&quot;, &quot;Dec&quot;, &quot;&quot;)

&amp;&quot;-&quot;&amp;  TEXT (YEAR( Payment_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <formula>IF(OR(CONTAINS(Reference__c, &quot;Cash&quot;), CONTAINS(Reference__c, &quot;cash&quot;), CONTAINS(Reference__c, &quot;CASH&quot;)), &quot;by Cash&quot;, 

IF(OR(CONTAINS(Reference__c, &quot;CC&quot;), CONTAINS(Reference__c, &quot;cc&quot;)), &quot;by Credit Card&quot;, 

IF(OR(CONTAINS(Reference__c, &quot;TT&quot;), CONTAINS(Reference__c, &quot;tt&quot;)), &quot;by Telegraphic Transfer&quot;,

IF(OR(CONTAINS(Reference__c, &quot;BT&quot;), CONTAINS(Reference__c, &quot;bt&quot;)), &quot;by Bank Transfer&quot;,

IF(OR(CONTAINS(Reference__c, &quot;CQ&quot;), CONTAINS(Reference__c, &quot;cq&quot;)), &quot;by Cheque&quot;, &quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Invoice_Amount__c</fullName>
        <formula>IF(Invoice_Statement__r.Xero_Status__c = &quot;PAID&quot;, 0.00, Invoice_Statement__r.Total_Invoice_Value_Calculated__c - Invoice_Statement__r.Total_Xero_Payments_Calculated__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Name_for_Docs_from_User__c</fullName>
        <formula>$User.Full_School_Name_for_Docs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name for Docs (from User)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Invoice_Statement__r.School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name_from_User__c</fullName>
        <formula>$User.FirstName&amp;&quot; &quot;&amp;$User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name (from User)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Account_Name__c</fullName>
        <label>Paid to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Id__c</fullName>
        <description>Unique Id of payment record in Xero</description>
        <externalId>true</externalId>
        <label>Xero Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PAY{YY}{MM}-{0000}</displayFormat>
        <label>Payment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>